# Project-Estimator

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.scripts.json  vite.config.ts
.github/workflows/: release.yml
scripts/: importFableXlsx.ts
src/: appState.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/canvas/: stage.ts
src/canvas-state/: canvasState.ts
src/estimate/: catalog-example.ts  catalog.ts  formulaEngine.ts  measureAssign.ts  project.ts  snapshot.ts  taskColors.ts
src/estimate/__tests__/: exampleCatalogValidation.test.ts  formulaEngine.test.ts
src/geometry/: transform.ts
src/measure/: scale.ts  units.ts
src/model/: document.ts
src/pdf/: renderer.ts
src/storage/: catalogStore.ts  projectStore.ts
src/tauri/: integration.ts
src/tools/: baseTool.ts  countTool.ts  measureLinearTool.ts  measurePolyTool.ts  measureRectTool.ts  panTool.ts  scaleSetTool.ts  selectTool.ts
src/ui/: bidExport.ts  catalogManager.ts  csvBulk.ts  estimateView.ts  modal.ts  pdfCanvas.ts
