[package]
name = "project-estimator"
version = "0.0.1"
description = "Project Estimator - Concrete Construction Estimating Tool"
authors = ["Project Estimator"]
edition = "2021"

[lib]
name = "project_estimator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
